Add new food options

--- a/user/menu.html
+++ b/user/menu.html
@@ -61,6 +61,15 @@
                         <button class="bg-green-400 text-white py-1 px-3 rounded-full hover:bg-green-500" onclick="addToCart('Mie Rebus', 8000)">Pilih</button>
                     </div>
                 </div>
+
+                <div class="mb-6 border-b pb-4">
+                    <img class="w-24 h-24 object-cover mb-2 rounded-full" src="https://assets-pergikuliner.com/Xz8mVF6YlzhpvGIiDeqYhEOxtiA=/385x290/smart/https://assets-pergikuliner.com/uploads/image/picture/79911/picture-1440383143.JPG" alt="Roti Bakar Cokelat Keju">
+                    <div class="flex justify-between items-center">
+                        <h4 class="text-gray-800 font-semibold">Roti Bakar Cokelat Keju</h4>
+                        <span class="text-black">Rp. 5.000</span>
+                        <button class="bg-green-600 text-black py-1 px-3 rounded-full hover:bg-green-700" onclick="addToCart('Roti Bakar Cokelat Keju', 5000)">Pilih</button>
+                    </div>
+                </div>
             </div>
 
             <!-- Bagian Menu Minuman -->
