--- a/user/menu_warjo.html
+++ b/user/menu_warjo.html
@@ -57,6 +57,15 @@
                 </div>
 
                 <div class="mb-6 border-b pb-4">
+                    <img class="w-24 h-24 object-cover mb-2 rounded-full" src="https://img-global.cpcdn.com/recipes/5fffec94496f2968/680x482cq70/nasi-goreng-chicken-katsu-foto-resep-utama.jpg" alt="Nasi Goreng Katsu">
+                    <div class="flex justify-between items-center">
+                        <h4 class="text-gray-800 font-semibold">Nasi Goreng Katsu</h4>
+                        <span class="text-gray-200">Rp. 12.000</span>
+                        <button class="bg-green-400 text-white py-1 px-3 rounded-full hover:bg-green-500" onclick="addToCart('Nasi Goreng Katsu', 12000)">Pilih</button>
+                    </div>
+                </div>
+
+                <div class="mb-6 border-b pb-4">
                     <img class="w-24 h-24 object-cover mb-2 rounded-full" src="https://assets-pergikuliner.com/Xz8mVF6YlzhpvGIiDeqYhEOxtiA=/385x290/smart/https://assets-pergikuliner.com/uploads/image/picture/79911/picture-1440383143.JPG" alt="Roti Bakar Cokelat Keju">
                     <div class="flex justify-between items-center">
                         <h4 class="text-gray-800 font-semibold">Roti Bakar Cokelat Keju</h4>
